--- a/cart.html
+++ b/cart.html
@@ -20,17 +20,33 @@
         </div>
     </nav>
     <br>
-   
+
     <br>
     <div class="main">
         <div id="container">
-           
+
 
 
         </div>
 
         <div class="sec-container">
-       
+            <div style="margin-top: 25px; font-size: 20px;color:darkslategray;text-align: center;">PRICE DETAILS</div>
+            <hr>
+            <br><br>
+            <div id="listmain">
+                <div id="list">
+
+                </div>
+            </div>
+            <br>
+            <hr>
+            <br>
+            <div id="totamt">
+                <div style="margin-left: 20px;font-size: 20px;" id="tot">Total Amount</div>
+            </div>
+            <div class="bttn"><button onclick="order()">PLACE ORDER</button></div>
+        </div>
+
     </div>
 
     <script src="./js/cart.js"></script>
