--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="">About</a>
             <a href="">Contact</a>
             <a href="cart.html" id="cart">Cart</a>
-            <a href="">Privacy</a>
+            <!-- <a href="">Privacy</a> -->
             <input type="text" placeholder="search" id="search">
         </div>
     </nav>
@@ -32,7 +32,7 @@
                     <h4 class="price">price</h4>
                     <h5 class="offer">offer</h5>
                     <br>
-                    <button>Cart</button>
+                    <button>Place Order</button>
 
                 </div>
             </a>
